SFDC Automation/src/objects/RSM_ServiceLevel_CompMap__c.object
<CustomObject>
    <fields>
        <fullName>Component__c</fullName>
        <label>Component</label>
        <picklist>
            <picklistValues>
                <fullName>M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M&amp;P</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Service_Level__c</fullName>
        <label>Service Level</label>
        <picklist>
            <picklistValues>
                <fullName>Plus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plus 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>STD</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Vendor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vendor</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>RSM_ServiceLevel_CompMap</relationshipLabel>
        <relationshipName>RSM_ServiceLevel_CompMap</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>RSM_ServiceLevel_CompMap</label>
    <nameField>
        <label>RSM_ServiceLevel_CompMap Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RSM_ServiceLevel_CompMap</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>